--- a/app/src/main/res/layout/item_list_todo.xml
+++ b/app/src/main/res/layout/item_list_todo.xml
@@ -9,7 +9,8 @@
         android:id="@+id/cd_content"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_margin="@dimen/default_margin"
+        android:layout_marginHorizontal="@dimen/default_margin"
+        android:layout_marginVertical="@dimen/middle_margin"
         android:checkable="true"
         android:clickable="true"
         android:focusable="true"
